--- a/src/css/style.css
+++ b/src/css/style.css
@@ -17,6 +17,17 @@ justify-items: start;
 width: calc(100% - 40px);
   }
 
+  .house {
+    display: grid;
+    grid-template-columns: 3fr;
+    margin-bottom: 2%;
+    text-align: center;
+    align-items: center;
+    padding-top: 30px;
+    width: calc(100% - 40px);
+    cursor: pointer;
+  } 
+
 
 }
 
@@ -35,7 +46,16 @@ width: calc(100% - 40px);
     width: calc(100% - 40px);
 justify-items: start;
   }
-
+  .house {
+    display: grid;
+    grid-template-columns: 3fr;
+    margin-bottom: 2%;
+    text-align: center;
+    align-items: center;
+    padding-top: 30px;
+    width: calc(100% - 40px);
+    cursor: pointer;
+  }  
 
 }
 
@@ -54,7 +74,16 @@ justify-items: start;
     justify-items: start;
   }
 
-
+  .house {
+    display: grid;
+    grid-template-columns: 3fr;
+    margin-bottom: 2%;
+    text-align: center;
+    align-items: center;
+    padding-top: 30px;
+    width: calc(100% - 40px);
+    cursor: pointer;
+  } 
 }
 
 
@@ -72,7 +101,16 @@ justify-items: start;
     width: calc(100% - 20px);
     justify-items: start;
   }
-
+  .house {
+    display: grid;
+    grid-template-columns: 3fr;
+    margin-bottom: 2%;
+    text-align: center;
+    align-items: center;
+    padding-top: 30px;
+    width: calc(100% - 40px);
+    cursor: pointer;
+  } 
 
 }
 
@@ -90,8 +128,27 @@ justify-items: start;
     width: calc(100% - 20px);
     justify-items: start;
   }
+  .house {
+    display: grid;
+    grid-template-columns: 0.3fr 0.9fr 3fr;
+    grid-template-rows: repeat(1, 1fr);
+    margin-bottom: 2%;
+    text-align: center;
+    align-items: center;
+    padding-top: 30px;
+    width: calc(100% - 40px);
+    cursor: pointer;
+  } 
 
-
+  .product-img:hover{
+    transform: scale(2);
+    
+  }
+ #product-img:hover{
+    width:500px;
+    height: 500px;
+        
+      }
 }
 
 
@@ -108,7 +165,26 @@ justify-items: start;
     justify-items: start;
   }
 
-
+  .house {
+    display: grid;
+    grid-template-columns: 0fr 0.9fr 3fr;
+    grid-template-rows: repeat(1, 1fr);
+    margin-bottom: 2%;
+    text-align: center;
+    align-items: center;
+    padding-top: 30px;
+    width: calc(100% - 40px);
+    cursor: pointer;
+  } 
+  .product-img:hover{
+    transform: scale(2);
+    
+  }
+ #product-img:hover{
+    width:500px;
+    height: 500px;
+        
+      }
 }
 
 @media (width >= 2201px) {
@@ -123,13 +199,31 @@ justify-items: start;
     width: calc(100% - 20px);
     justify-items: start;
   }
-
-
+  .house {
+    display: grid;
+    grid-template-columns: 0.3fr 0.9fr 3fr;
+    grid-template-rows: repeat(1, 1fr);
+    margin-bottom: 2%;
+    text-align: center;
+    align-items: center;
+    padding-top: 30px;
+    width: calc(100% - 40px);
+    cursor: pointer;
+  } 
+  .product-img:hover{
+    transform: scale(2);
+    
+  }
+ #product-img:hover{
+    width:500px;
+    height: 500px;
+        
+      }
 }
 
 
 
-@media  (width <= 680px) {
+@media  (width <= 1000px) {
 
 
   .product-wrapper {
@@ -148,7 +242,7 @@ justify-items: start;
 }
 
 
-@media  (width > 680px) {
+@media  (width > 1001px) {
 
 
   .product-wrapper {
@@ -208,17 +302,7 @@ a {
   opacity: 1;
 }
   
-.house {
-  display: grid;
-  grid-template-columns: 0.3fr 0.9fr 3fr;
-  grid-template-rows: repeat(1, 1fr);
-  margin-bottom: 2%;
-  text-align: center;
-  align-items: center;
-  padding-top: 30px;
-  width: calc(100% - 40px);
-  cursor: pointer;
-} 
+
 
 .product-link:nth-child(even){
   background-color: rgba(250, 223, 118, 0.5);
@@ -234,6 +318,9 @@ a {
     height: 300px;
     background-size: cover;
     background-position: center;
+    transition: width 3s, height 3s;
+    border-radius: 10px;
+
   }
 
 #product-info {
@@ -257,6 +344,8 @@ box-shadow: -1px 2px 6px 0px rgba(82,80,80,0.53);
     height: auto;
     border-radius: 15px 5px 10px 0px;
   }
+
+
   
   .name {
     font-size: 26px;
@@ -395,3 +484,4 @@ justify-items: center;
   padding: 15px;
   border-radius: 5px;
 }
+
