--- a/src/css/style.css
+++ b/src/css/style.css
@@ -265,9 +265,13 @@ nav {
   width: 90%;
   height: 40px;
   padding: 20px 10px 10px 50px;
+  margin-bottom: 20px;
   width: calc(100% - 60px);
   font-size: 28px;
   border-radius: 5px;
+  box-shadow: 0px 3px 8px 0px rgba(73, 73, 73, 0.59);
+-webkit-box-shadow: 0px 3px 8px 0px rgba(73, 73, 73, 0.59);
+-moz-box-shadow: 0px 3px 8px 0px rgba(73, 73, 73, 0.59);
 }
 
 nav ul li {
@@ -422,6 +426,9 @@ background-color: rgb(86, 86, 86);
 padding: 20px;
 margin: 10px 10px 0px 0px;
 text-align: center;
+box-shadow: 0px 3px 8px 0px rgba(73, 73, 73, 0.59);
+-webkit-box-shadow: 0px 3px 8px 0px rgba(73, 73, 73, 0.59);
+-moz-box-shadow: 0px 3px 8px 0px rgba(73, 73, 73, 0.59);
   }
   
 
